# llm-cost-optimizer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  integration.yml
MEMORY/: core_decisions_ai.md  core_decisions_human.md  full_history_ai.md  full_history_human.md
cost_optimizer/: __init__.py  batch.py  cache_wrapper.py  io_utils.py  pricing.py  router.py  semantic_cache.py
dashboard/: __init__.py  app.py
docs/: architecture.md  savings.json  savings.md  savings_workload.json  threshold_demo.json
scripts/: _io.py  bench_savings.py  capture_demo.py  capture_demo.sh  tune_threshold.py
tests/: test_architecture_doc.py  test_atomic_write.py  test_batch.py  test_bench_savings.py  test_cache_wrapper.py  test_cache_wrapper_dump.py  test_capture_demo_smoke.py  test_pricing.py  test_public_surface.py  test_readme_banned_phrases.py  test_readme_decision_range.py  test_readme_defaults_snapshot.py  test_readme_paths_resolve.py  test_router.py  test_router_dump.py  test_savings_snapshot.py  test_semantic_cache.py  test_semantic_cache_dump.py  test_tune_threshold.py  test_workflows_concurrency.py  test_workflows_timeout_minutes.py  test_workflows_yaml_parseable.py
tests/integration/: test_live_cache.py
